Fixing spacing and font style on docs main page

--- a/src/styles/components/cards.scss
+++ b/src/styles/components/cards.scss
@@ -145,3 +145,22 @@
     transition: .6s;
   }
 }
+
+h6 {
+  font-weight: 700;
+  letter-spacing: -0.05rem;
+  line-height: 1;
+}
+
+#get-started {
+  margin-bottom: 5px;
+}
+
+#hosting, #git-system {
+  margin-bottom: 20px;
+  margin-top: 80px;
+}
+
+.card-grid {
+  margin-bottom: 80px;
+}
