--- a/src/styles/components/markdown.scss
+++ b/src/styles/components/markdown.scss
@@ -1,8 +1,4 @@
 .markdown-content {
-  > * {
-    margin-bottom: 40px;
-  }
-
   a {
     color: var(--primary-text-color);
     font-weight: 600;
